# AeolusDT-Njord

./: .gitignore  LICENSE  README.md  njord_dashboard.py  pyproject.toml  requirements.txt
scripts/: compute_density_power.py  compute_power.py  compute_power_boxA.py  compute_wake_power.py  download_era5.py  extract_inflow.py  map_all_regions.py  plot_layout_and_inflow.py  plot_wake_direction.py  report_energy_cf.py  turbines_map.py  wind_snapshots.py
src/aeolusdt_njord.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/njord/: config.py
viz/maps/: njord_all_regions.html  sn2_box_c_layout_r3c4.html  tampen_box_a_layout_r3c4.html  utsira_nord_box_b_layout_r3c4.html
