[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aeolusdt-njord"
version = "0.1.0"
description = "AeolusDT-Njord: Offshore wind farm digital twin (wind-field replay, inflow, power, OpenFAST)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "xarray>=2024.1",
  "numpy>=1.26",
  "pandas>=2.1",
  "matplotlib>=3.8",
  "netCDF4>=1.6",
  "dask[array]>=2024.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
