[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aeolusdt-njord"
version = "0.1.0"
description = "AeolusDT-Njord: Offshore wind farm digital twin (wind-field replay, inflow, power)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Alexander Kershaw" }]
dependencies = [
  # Core scientific
  "numpy>=1.26",
  "pandas>=2.1",
  "xarray>=2024.1",
  "scipy>=1.11",

  # NetCDF / formats
  "netcdf4>=1.6",
  "h5netcdf>=1.3",
  "pyarrow>=14.0",

  # Plotting
  "matplotlib>=3.8",

  # Storage/SQL
  "duckdb>=1.0",

  # ERA5 download
  "cdsapi>=0.7",

  # Dashboard map
  "streamlit>=1.31",
  "folium>=0.15",
  "streamlit-folium>=0.18",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "black>=24.0",
]

perf = [
  "dask[array]>=2024.1",
  "zarr>=2.17",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py311"]